src/styles/_work.scss
.work_container{
    position: relative;
    width: 100%;
    min-height: 100vh;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    background: #282828;
    color: #fff;
    padding: 3% 5%;
    .project_card{
        display: flex;
        justify-content: space-between;
        flex-wrap: wrap;
        width: 100%;
        .img_container{
            width: 60%;
            cursor: pointer;
            position: relative;
            ::before,::after{
                content: '';
                position: absolute;
            }
            img{
                height: 100%;
                width: 100%;
                background-size: cover;
            }
            :hover{
                opacity: 0.3;
            }
            .view_prj{
                opacity: 0;
                position: absolute;
                top: 50%;
                right: 50%;
                transform: translate(50%,-50%);
                height: 4rem;
                border: 4px solid #FFC400;
                background:#000 ;
                color: #FFC400;
                cursor: pointer;
                font-size: 2rem;
            }
        }
        .dtls_container{
            width: 30%;
            .work_typo{
                font-size: 6rem;
                white-space: nowrap;
            }
            .title{
                font-size: 2rem;
                padding-bottom: 2rem;
            }
            .desc, .tech{
                font-size: 1.5rem;
                padding-bottom: 2rem;
                span{
                    font-size: 1rem;
                }
            }
        }
    }
}

@media only screen and (min-width: 320px) and (max-width: 768px)  {
    .work_container{
        .img_container, .dtls_container{
            width: 100% !important;
        }
        .img_container{
            .view_prj{
                opacity: 1 !important;
                top: 150% !important;
            }
            img:hover{
                opacity: 1 !important;
            }
        }
        .project_card{
            height: fit-content;
            margin-bottom: 2rem;
        }
        .dtls_container{
            .work_typo{
                font-size: 2.8rem !important;
                padding-top: 2rem !important;
            }
            .title{
                font-size: 2rem !important;
                padding-bottom: 3rem !important;
            }
            .desc, .tech{
                font-size: 1.8rem !important;
                padding-bottom: 4rem !important;
                span{
                    font-size: 1.4rem !important;
                    padding-bottom: 4rem;
                }
            }
        }
    }
}

